force-app/main/default/objects/Asset_contract__c/Asset_contract__c.object-meta.xml
<CustomObject>
    <label>Asset Contract</label>
    <nameField>
        <displayFormat>AC-{00000000}</displayFormat>
        <label>Asset contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>