force-app/main/default/objects/Asset_contract__c/fields/Article_02__c.field-meta.xml
<CustomField>
    <fullName>Article_02__c</fullName>
    <label>Article 02</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>