force-app/main/default/objects/Asset_contract__c/fields/Article_03__c.field-meta.xml
<CustomField>
    <fullName>Article_03__c</fullName>
    <label>Article 03</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>