force-app/main/default/objects/Asset_contract__c/fields/Article__c.field-meta.xml
<CustomField>
    <fullName>Article__c</fullName>
    <label>Article 01</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>