force-app/main/default/objects/Asset_contract__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset.</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Asset Contracts</relationshipLabel>
    <relationshipName>Asset_Contracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>