force-app/main/default/objects/Asset_contract__c/fields/Contract_number__c.field-meta.xml
<CustomField>
    <fullName>Contract_number__c</fullName>
    <label>Contract number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>