force-app/main/default/objects/Asset_contract__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Contracts</relationshipLabel>
    <relationshipName>Asset_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>